--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <pre></pre>
     <script>
         async function getUserInfo() {
-            const response = await fetch('/.auth/me');
+            const response = await fetch('/test');
             const user = await response.json();
             const pre = document.querySelector('pre');
             pre.textContent = JSON.stringify(user, null, 2);
