--- a/src/index.html
+++ b/src/index.html
@@ -26,11 +26,12 @@
         </ul>
     </div>
     <hr>
-    <pre></pre>
+    <pre id="auth"></pre>
+    <pre id="api"></pre>
     <script>
         async function getUserInfo() {
-            const response = await fetch('/api/test');
-            const pre = document.querySelector('pre');
+            const response = await fetch('/.auth/me');
+            const pre = document.getElementById('auth');
             if (response.ok) {
                 const user = await response.json();                
                 pre.textContent = JSON.stringify(user, null, 2);
@@ -38,8 +39,18 @@
                 pre.textContent = "error: " + response.statusText;
             }
         }
-
+        async function getApiResult(url) {
+            const response = await fetch(url);
+            const pre = document.getElementById('api');
+            if (response.ok) {
+                const user = await response.json();                
+                pre.textContent = JSON.stringify(user, null, 2);
+            } else {
+                pre.textContent = "error: " + response.statusText;
+            }
+        }
         getUserInfo();
+        getApiResult('/api/Test');
     </script>
 </body>
 
